--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "start": "vite --port $PORT",
         "dev": "vite",
         "build": "vite build",
-        "preview": "vite preview"
+        "preview": "vite preview --host 0.0.0.0 --port $PORT"
     },
     "dependencies": {
         "axios": "^1.2.2",
